cambios textos esteban

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <!-- site metas -->
-    <title>Campobasso</title>
+    <title>Quesos Campobasso - Bienvenidos a Quesos Campobasso!</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="1828 Branding Agency | hola@1828branding.com"/>
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- style css -->
@@ -399,8 +399,9 @@
                 <h1>Queso rallado para <br />profesionales gastronómicos</h1>
                 <div class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
+                  href="https://api.whatsapp.com/send?phone=5491150477075&text=Hola! Quiero cotizar Quesos Rallados por mayor para mi comercio!" target="_blank"
                     >COTIZÁ AHORA!</a
+                  
                   >
                 </div>
               </div>
@@ -423,7 +424,7 @@
                 <h1>Queso rallado para <br />profesionales gastronómicos</h1>
                 <div data-aos="fade-up" class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
+                  href="https://api.whatsapp.com/send?phone=5491150477075&text=Hola! Quiero cotizar Quesos Rallados por mayor para mi comercio!" target="_blank"
                     >COTIZÁ AHORA!</a
                   >
                 </div>
@@ -447,7 +448,7 @@
                 <h1>Queso rallado para <br />profesionales gastronómicos</h1>
                 <div data-aos="fade-up" class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
+                  href="https://api.whatsapp.com/send?phone=5491150477075&text=Hola! Quiero cotizar Quesos Rallados por mayor para mi comercio!" target="_blank"
                     >COTIZÁ AHORA!</a
                   >
                 </div>
@@ -471,7 +472,7 @@
                 <h1>Queso rallado para <br />profesionales gastronómicos</h1>
                 <div data-aos="fade-up" class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
+                  href="https://api.whatsapp.com/send?phone=5491150477075&text=Hola! Quiero cotizar Quesos Rallados por mayor para mi comercio!" target="_blank"
                     >COTIZÁ AHORA!</a
                   >
                 </div>
@@ -495,7 +496,7 @@
                 <h1>Queso rallado para <br />profesionales gastronómicos</h1>
                 <div data-aos="fade-up" class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
+                  href="https://api.whatsapp.com/send?phone=5491150477075&text=Hola! Quiero cotizar Quesos Rallados por mayor para mi comercio!" target="_blank"
                     >COTIZÁ AHORA!</a
                   >
                 </div>
@@ -519,7 +520,7 @@
                 <h1>Queso rallado para <br />profesionales gastronómicos</h1>
                 <div data-aos="fade-up" class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
+                  href="https://api.whatsapp.com/send?phone=5491150477075&text=Hola! Quiero cotizar Quesos Rallados por mayor para mi comercio!" target="_blank"
                     >COTIZÁ AHORA!</a
                   >
                 </div>
@@ -551,12 +552,12 @@
               empresas, colegios y cárceles; para chefs, restaurantes y
               rotiserías.
             </p>
-            <p>
+            <p class="contamos-con-text-dest">
               Te presentamos los distintos blends de rallados deshidratados y
               sin deshidratar para la industria.
             </p>
             <div class="porque-button">
-              <a data-aos="fade-up" href="nuestra-empresa.html">MÁS INFO</a>
+              <a data-aos="fade-up" href="rallados-x-mayor.html">MÁS INFO</a>
             </div>
           </div>
         </div>
@@ -698,6 +699,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       </ol>
       <div class="carousel-inner">
+          <!-- Provo 1 - Panceta, Morron y Oliva -->
         <div data-bs-interval="500" class="carousel-item active">
           <img
             class="d-flex w-100 primera-vista provo-carousel-img"
@@ -712,20 +714,19 @@
               >
                 <h2 class="provo-sabo-h2">Provoletas Saborizadas</h2>
                 <p class="provo-sabo-h1 desc" data-aos="fade-up">
-                  Nuestras provos YA VIENEN LISTAS!<br />Panceta, Morrón y
-                  Oliva. Tomates secos. Provenzal. <br />Cebollas caramelizadas
-                  y Merkel
+                  Provoleta Panceta,<br/>Morrón y Oliva.
                 </p>
                 <div class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
-                    >PROBÁLAS!</a
+                    href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Provoletas Saborizadas: Panceta, Morrón y Oliva!!!" target="_blank"
+                    >PROBALA!</a
                   >
                 </div>
               </div>
             </div>
           </div>
         </div>
+         <!-- Provo 2 - Infierno -->
         <div data-bs-interval="500" class="carousel-item">
           <img
             class="d-flex w-100 segunda-vista provo-carousel-img"
@@ -740,20 +741,19 @@
               >
                 <h2 class="provo-sabo-h2">Provoletas Saborizadas</h2>
                 <p class="provo-sabo-h1 desc" data-aos="fade-up">
-                  Nuestras provos YA VIENEN LISTAS!<br />Panceta, Morrón y
-                  Oliva. Tomates secos. Provenzal. <br />Cebollas caramelizadas
-                  y Merkel
+                  Provoleta Infierno con<br/>Merkel chileno.
                 </p>
                 <div data-aos="fade-up" class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
-                    >PROBÁLAS!</a
+                  href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Provoletas Saborizadas: Infierno!!!" target="_blank"
+                    >PROBALA!</a
                   >
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <!-- Provo 3 - Tomates Secos -->
         <div data-bs-interval="500" class="carousel-item">
           <img
             class="d-flex w-100 primera-vista provo-carousel-img"
@@ -768,20 +768,19 @@
               >
                 <h2 class="provo-sabo-h2">Provoletas Saborizadas</h2>
                 <p class="provo-sabo-h1 desc" data-aos="fade-up">
-                  Nuestras provos YA VIENEN LISTAS!<br />Panceta, Morrón y
-                  Oliva. Tomates secos. Provenzal. <br />Cebollas caramelizadas
-                  y Merkel
+                  Provoleta con Tomates<br/>Secos, Albahaca y Oliva.
                 </p>
                 <div class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
-                    >PROBÁLAS!</a
+                  href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Provoletas Saborizadas: Tomates Secos!!!" target="_blank"
+                    >PROBALA!</a
                   >
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <!-- Provo 4 - Cebolla Ahumada -->
         <div data-bs-interval="500" class="carousel-item">
           <img
             class="d-flex w-100 primera-vista provo-carousel-img"
@@ -796,20 +795,19 @@
               >
                 <h2 class="provo-sabo-h2">Provoletas Saborizadas</h2>
                 <p class="provo-sabo-h1 desc" data-aos="fade-up">
-                  Nuestras provos YA VIENEN LISTAS!<br />Panceta, Morrón y
-                  Oliva. Tomates secos. Provenzal. <br />Cebollas caramelizadas
-                  y Merkel
+                  Provoleta con Cebolla<br />Ahumada
                 </p>
                 <div class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
-                    >PROBÁLAS!</a
+                  href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Provoletas Saborizadas: Cebolla Ahumada!!!" target="_blank"
+                    >PROBALA!</a
                   >
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <!-- Provo 5 - Clasica -->
         <div data-bs-interval="500" class="carousel-item">
           <img
             class="d-flex w-100 primera-vista provo-carousel-img"
@@ -824,20 +822,19 @@
               >
                 <h2 class="provo-sabo-h2">Provoletas Saborizadas</h2>
                 <p class="provo-sabo-h1 desc" data-aos="fade-up">
-                  Nuestras provos YA VIENEN LISTAS!<br />Panceta, Morrón y
-                  Oliva. Tomates secos. Provenzal. <br />Cebollas caramelizadas
-                  y Merkel
+                  Provoleta Clásica<br/>con Hierbas
                 </p>
                 <div class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
-                    >PROBÁLAS!</a
+                  href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Provoletas Saborizadas: Clásica!!!" target="_blank"
+                    >PROBALA!</a
                   >
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <!-- Provo 6 - Provenzal -->
         <div data-bs-interval="500" class="carousel-item">
           <img
             class="d-flex w-100 primera-vista provo-carousel-img"
@@ -852,14 +849,12 @@
               >
                 <h2 class="provo-sabo-h2">Provoletas Saborizadas</h2>
                 <p class="provo-sabo-h1 desc" data-aos="fade-up">
-                  Nuestras provos YA VIENEN LISTAS!<br />Panceta, Morrón y
-                  Oliva. Tomates secos. Provenzal. <br />Cebollas caramelizadas
-                  y Merkel
+                  Provoleta Provenzal <br/>Casero con Oliva
                 </p>
                 <div class="cotiza_button">
                   <a
-                    href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!"
-                    >PROBÁLAS!</a
+                  href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Provoletas Saborizadas: Provenzal Casero!!!" target="_blank"
+                    >PROBALA!</a
                   >
                 </div>
               </div>
@@ -885,7 +880,7 @@
         </div>
       </div>
       <div class="container-mix-fondue">
-        <img data-aos="fade-up" src="images/mix-zoomed.png" alt="" />
+        <img data-aos="fade-up" src="images/Home/ImagenMixFodue-Home.jpg" alt="" />
         <div class="container-mix-text">
           <h1 data-aos="fade-up">Mix <br />Fondue</h1>
           <h3 data-aos="fade-up">
@@ -893,7 +888,7 @@
           </h3>
           <div class="cotiza_button">
             <a data-aos="fade-up" href="nuestros-quesos.html#fondue"
-              >PROBÁLO!</a
+              >PROBALO!</a
             >
           </div>
         </div>
@@ -911,7 +906,7 @@
       </div>
       <img data-aos="fade-up" src="images/almacenzoomed.png" alt="" />
       <div class="cotiza_button veni-button">
-        <a href="nuestra-empresa.html">VENÍ A CONOCERLO</a>
+        <a href="puntos-de-venta.html">VENÍ A CONOCERLO</a>
       </div>
     </div>
 
@@ -980,9 +975,9 @@
                 <div class="Informa helpful">
                   <h3>CAMPOBASSO</h3>
                   <ul>
-                    <li><a href="nosotros.html">NOSOTROS</a></li>
-                    <li><a href="nuestros.html">HISTORIA</a></li>
-                    <li><a href="quesos_rallados.html">UNITE!</a></li>
+                    <li><a href="rallados-x-mayor.html#gremio">ATENCIÓN GREMIO</a></li>
+                    <li><a href="nuestra-empresa.html#historia">HISTORIA</a></li>
+                    <li><a href="contacto.html#formNewsletter">UNITE!</a></li>
                     <li><a href="contacto.html">DATA FISCAL</a></li>
                   </ul>
                 </div>
@@ -1022,10 +1017,12 @@
             <div class="row d_flex">
               <div class="adress-footer-container">
                 <p>
-                  Av. Belgrano 1917, Don Torcuato, Buenos Aires - Tel. 11
-                  4748-0608
+                  Av. Belgrano 1917, Don Torcuato, Buenos Aires - Tel. 11 4748-0608
                 </p>
-                <p>Copyright ©2024 Campobasso Quesos. All Rights Reserved.</p>
+                <p>Copyright ©2024 Campobasso Quesos. All Rights Reserved</p>           
+              </div>
+              <div class="firma1828 text_align_right">
+                <p>Web Design & Development by <a href="https://www.1828branding.com"> 1828 Branding</a>  
               </div>
             </div>
           </div>
@@ -1039,7 +1036,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
     <a
-      href="https://api.whatsapp.com/send?phone=541157992723&text"
+      href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola estoy navegando el sitio web!"
       class="float"
       target="_blank"
     >
