--- a/nuestra-empresa.html
+++ b/nuestra-empresa.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <!-- site metas -->
-    <title>Campobasso</title>
+    <title>Queos Campobasso - Nuestra Empresa</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="1828 Branding Agency | hola@1828branding.com"/>
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- style css -->
@@ -159,7 +159,7 @@
                 data-aos="fade-down"
                 class="bluid nosotros-slider carousel-caption d-md-block"
               >
-                <p>NOSOTROS</p>
+                <p>NUESTRA EMPRESA</p>
                 <h1>Más de un Siglo <br />de Pasión y Sabor</h1>
               </div>
             </div>
@@ -177,7 +177,7 @@
                 data-aos="fade-down"
                 class="bluid nosotros-slider carousel-caption d-md-block"
               >
-                <p>NOSOTROS</p>
+                <p>NUESTRA EMPRESA</p>
                 <h1>Mas de un Siglo <br />de Pasión y Sabor</h1>
               </div>
             </div>
@@ -195,7 +195,7 @@
                 data-aos="fade-down"
                 class="bluid nosotros-slider carousel-caption d-md-block"
               >
-                <p>NOSOTROS</p>
+                <p>NUESTRA EMPRESA</p>
                 <h1>Mas de un Siglo <br />de Pasión y Sabor</h1>
               </div>
             </div>
@@ -213,7 +213,7 @@
                 data-aos="fade-down"
                 class="bluid nosotros-slider carousel-caption d-md-block"
               >
-                <p>NOSOTROS</p>
+                <p>NUESTRA EMPRESA</p>
                 <h1>Mas de un Siglo <br />de Pasión y Sabor</h1>
               </div>
             </div>
@@ -231,7 +231,7 @@
                 data-aos="fade-down"
                 class="bluid nosotros-slider carousel-caption d-md-block"
               >
-                <p>NOSOTROS</p>
+                <p>NUESTRA EMPRESA</p>
                 <h1>Mas de un Siglo <br />de Pasión y Sabor</h1>
               </div>
             </div>
@@ -267,7 +267,7 @@
           src="images/Nosotros/Ilustracion-Nosotros.svg"
           alt="vaga-img"
         />
-        <div class="container-nosotros nuestra-empresa">
+        <div id="historia" class="container-nosotros nuestra-empresa">
           <div class="container-nosotros-info">
             <h1 data-aos="fade-up">Nuestra Historia</h1>
             <p data-aos="fade-up" class="mobile-info">
@@ -458,9 +458,9 @@
                 <div class="Informa helpful">
                   <h3>CAMPOBASSO</h3>
                   <ul>
-                    <li><a href="nosotros.html">NOSOTROS</a></li>
-                    <li><a href="nuestros.html">HISTORIA</a></li>
-                    <li><a href="quesos_rallados.html">UNITE!</a></li>
+                    <li><a href="rallados-x-mayor.html#gremio">ATENCIÓN GREMIO</a></li>
+                    <li><a href="nuestra-empresa.html#historia">HISTORIA</a></li>
+                    <li><a href="contacto.html#formNewsletter">UNITE!</a></li>
                     <li><a href="contacto.html">DATA FISCAL</a></li>
                   </ul>
                 </div>
@@ -505,6 +505,9 @@
                 </p>
                 <p>Copyright ©2024 Campobasso Quesos. All Rights Reserved.</p>
               </div>
+              <div class="firma1828 text_align_right">
+                <p>Web Design & Development by <a href="https://www.1828branding.com"> 1828 Branding</a>  
+              </div>
             </div>
           </div>
         </div>
@@ -517,7 +520,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
     <a
-      href="https://api.whatsapp.com/send?phone=51900000000&text"
+      href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola estoy navegando el sitio web!"
       class="float"
       target="_blank"
     >
