--- a/nuestros-quesos.html
+++ b/nuestros-quesos.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <!-- site metas -->
-    <title>Campobasso</title>
+    <title>Quesos Campobasso - Nuestros Quesos</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="1828 Branding Agency | hola@1828branding.com"/>
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- style css -->
@@ -146,6 +146,7 @@
       class="carousel slide"
       data-ride="carousel"
     >
+      <!-- SLIDE 1 -->
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="1000">
           <img
@@ -162,6 +163,8 @@
             </div>
           </div>
         </div>
+
+        <!-- SLIDE 2 -->
         <div class="carousel-item" data-bs-interval="1000">
           <img
             class="d-flex w-100 segunda-vista"
@@ -177,6 +180,8 @@
             </div>
           </div>
         </div>
+
+        <!-- SLIDE 3 -->
         <div class="carousel-item" data-bs-interval="1000">
           <img
             class="d-flex w-100 segunda-vista"
@@ -192,6 +197,8 @@
             </div>
           </div>
         </div>
+
+        <!-- SLIDE 4 -->
         <div class="carousel-item" data-bs-interval="1000">
           <img
             class="d-flex w-100 segunda-vista"
@@ -207,6 +214,8 @@
             </div>
           </div>
         </div>
+
+        <!-- SLIDE 5 -->
         <div class="carousel-item" data-bs-interval="1000">
           <img
             class="d-flex w-100 segunda-vista"
@@ -282,7 +291,8 @@
           <h6>HORMA DE 10KG Y MEDIA HORMA DE 5KG. FRACCIONADO EN TROZO INDIVIDUAL Y ENVASADO AL VACÍO DE 200 A 300GRS.</h6>
         </div>
         <div class="pedilo-button">
-          <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">PEDILO</a>
+         <a href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Queso Parmesano" target="_blank">
+            PEDILO</a>
         </div >
       </div>
     </div>
@@ -302,7 +312,8 @@
           <h6>HORMA DE 5KG Y MEDIA HORMA 2.5KG. FRACCIONADO EN TROZOS INDIVIDUALES Y ENVASADOS AL VACÍO DE 250 A 300GRS Y CORAZON DE REGGIANITO 450 A 500GRS.</h6>
         </div>
         <div class="pedilo-button">
-          <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">PEDILO</a>
+          <a href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Queso Reggianito" target="_blank">
+            PEDILO</a>
         </div >  
       </div>
       <img data-aos="fade-up" src="images/NAT_1342.jpg" alt="parmesano">
@@ -318,14 +329,15 @@
         <p>Con una textura firme y un sabor robusto, el Provoglone es ideal para disfrutar solo o en sándwiches, ensaladas y platos cocinados. Su versatilidad en la cocina lo convierte en una elección popular para aperitivos y recetas variadas.</p>
         <div class="ingredientes">
           <h5>INGREDIENTES:</h5>
-          <h6>LECHE VACUNA 100% PASTEURIZADA, CULTIVOS LÁCTICOS, FERMENTO, CUAJO Y SAL. ¡SIN TACC!</h6>
+          <h6>LECHE VACUNA 100% PASTEURIZADA, CULTIVOS LÁCTICOS, FERMENTO, CUAJO Y SAL.</h6>
         </div>
         <div class="presentacion">
           <h5>PRESENTACIÓN:</h5>
           <h6>HORMA DE 6KG Y MEDIA HORMA 3KG. TROZO INDIVIDUAL ENVASADO AL VACÍO DE 350 A 400GRS.</h6>
         </div>
         <div class="pedilo-button">
-          <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">PEDILO</a>
+          <a href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Queso Provologne" target="_blank">
+            PEDILO</a>
         </div >  
       </div>
     </div>
@@ -345,7 +357,8 @@
           <h6>HORMA DE 3.5KG Y MEDIA HORMA 1.75KG. FRACCIONADO EN CUÑA INDIVIDUAL Y ENVASADO AL VACÍO DE 250 A 300GRS.</h6>
         </div>
         <div class="pedilo-button">
-          <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">PEDILO</a>
+          <a href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Queso Sardo" target="_blank">
+          PEDILO</a>
         </div >
       </div>
       <img data-aos="fade-up" src="images/SARDO.jpg" alt="parmesano">
@@ -368,7 +381,8 @@
           <h6>HORMA DE 3KG Y MEDIA HORMA 1.5KG. FRACCIONADO EN TROZO INDIVIDUAL Y ENVASADO AL VACÍO DE 180GRS.</h6>
         </div>
         <div class="pedilo-button">
-          <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">PEDILO</a>
+          <a href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Queso Provoleta" target="_blank">
+            PEDILO</a>
         </div >  
       </div>
     </div>
@@ -399,7 +413,8 @@
           <h6>PROVOLETA INDIVIDUAL ENVASADA AL VACÍO DE 180 A 200GRS. EN CAZUELA DE ALUMINIO, LISTA PARA SU COCCIÓN.</h6>
         </div>
         <div class="pedilo-button">
-          <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">PEDILO</a>
+          <a href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Proveletas Saborizadas" target="_blank">
+            PEDILO</a>
         </div >  
       </div>
 
@@ -450,7 +465,8 @@
           <h6>PROVOLETA INDIVIDUAL ENVASADA AL VACÍO DE 400 A 500GRS.</h6>
         </div>
         <div class="pedilo-button">
-          <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">PEDILO</a>
+          <a href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Proveleta XL" target="_blank">
+            PEDILO</a>
         </div >  
       </div>
       <img data-aos="fade-up" src="images/NAT_1221.jpg" alt="parmesano">
@@ -474,7 +490,8 @@
           <h6>PORCIÓN PARA COMPARTIR ENVASADA AL VACÍO DE 500GRS.</h6>
         </div>
         <div class="pedilo-button">
-          <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">PEDILO</a>
+          <a href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Mix para Fondue" target="_blank">
+            PEDILO</a>
         </div >  
       </div>
     </div>
@@ -493,7 +510,8 @@
           <h6>QUESO RALLADO DESHIDRATADO BOLSA INDIVIDUAL ENVASADO AL VACÍO CON CIERRE POUCH DE: 80 Y 120GRS POTE PLASTICO: DE 100 Y 180GRS. <br> QUESO RALLADO FINO Y EN HEBRAS SIN DESHIDRATAR BOLSAS DE 100, 250, 500 Y 1.000GRS.</h6>
         </div>
         <div class="pedilo-button">
-          <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">PEDILO</a>
+          <a href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola! Quisiera Comprar Quesos Rallados" target="_blank">
+            PEDILO</a>
         </div >  
       </div>
       <img data-aos="fade-up" src="images/NAT_1502.jpg" alt="parmesano">
@@ -625,6 +643,9 @@
                 </p>
                 <p>Copyright ©2024 Campobasso Quesos. All Rights Reserved.</p>
               </div>
+              <div class="firma1828 text_align_right">
+                <p>Web Design & Development by <a href="https://www.1828branding.com"> 1828 Branding</a>  
+              </div>
             </div>
           </div>
         </div>
@@ -637,7 +658,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
     <a
-      href="https://api.whatsapp.com/send?phone=51900000000&text"
+    href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola estoy navegando el sitio web!"
       class="float"
       target="_blank"
     >
