--- a/rallados-x-mayor.html
+++ b/rallados-x-mayor.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <!-- site metas -->
-    <title>Campobasso</title>
+    <title>Quesos Campobasso - Quesos Rallados Venta Mayorista a Profesionales</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="1828 Branding Agency | hola@1828branding.com"/>
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- style css -->
@@ -310,7 +310,7 @@
     </div>
     <!-- end section-a -->
     <!-- section-b -->
-    <div class="container-portfolio-rallados">
+    <div id="gremio" class="container-portfolio-rallados">
       <h3 class="porque-eligen">¿POR QUÉ NOS ELIGEN?</h3>
       <h2 data-aos="fade-up" class="expertos">Los expertos gastronómicos eligen nuestros productos porque se integran sin esfuerzo en masas y rellenos, porque resaltan sabores en salsas o platos calientes, o bien para extender por encima de platos o para gratinar y/o fundir en panificados.</h2>
       <div class="portfolio_quesos d-flex w-100 justify-content-center">
@@ -366,7 +366,7 @@
         </div>
       </div>
       <div data-aos="fade-up" class="contacta-asesor">
-        <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">CONTACTÁ UN ASESOR COMERCIAL</a>
+        <a href="https://api.whatsapp.com/send?phone=5491150477075&text=Hola! Quiero cotizar Quesos Rallados por mayor para mi comercio!" target="_blank" >CONTACTÁ UN ASESOR COMERCIAL</a>
       </div>
     </div>
     </div>
@@ -402,21 +402,27 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div data-aos="fade-up" id="container-carousel" class="carousel-inner">
             <div id="container-carousel-img" class="carousel-item container-carousel-img active">
-              <img class="d-block w-100" src="images/NAT_1639.jpg" alt="First slide">
+              <img class="d-block w-100" src="images/Rallados/SlidePresentacion/NAT_1641.jpg" alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-cursiva">Fino</h5>
+              </div>
+            </div>
+            <div id="container-carousel-img" class="carousel-item container-carousel-img">
+              <img class="d-block w-100" src="images/Rallados/SlidePresentacion/NAT_1640.jpg" alt="Second slide">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-cursiva">Hebras</h5>
               </div>
             </div>
             <div id="container-carousel-img" class="carousel-item container-carousel-img">
-              <img class="d-block w-100" src="images/NAT_1640.jpg" alt="Second slide">
+              <img class="d-block w-100" src="images/Rallados/SlidePresentacion/NAT_1656.jpg" alt="Second slide">
               <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-cursiva">Hebras</h5>
+                <h5 class="text-cursiva">Cuñas</h5>
               </div>
             </div>
             <div id="container-carousel-img" class="carousel-item container-carousel-img">
-              <img class="d-block w-100" src="images/NAT_1641.jpg" alt="Third slide">
+              <img class="d-block w-100" src="images/Rallados/SlidePresentacion/NAT_1657.jpg" alt="Third slide">
               <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-cursiva">Molido</h5>
+                <h5 class="text-cursiva">Escamas</h5>
               </div>
             </div>
           </div>
@@ -481,7 +487,7 @@
             </div>
           </div>
           <div data-aos="fade-up" class="comprar-ahora-button">
-            <a href="https://api.whatsapp.com/send?phone=51900000000&text=Hola quisiera saber la cotizacion de sus quesos!">COMPRAR AHORA!</a>
+            <a href="https://api.whatsapp.com/send?phone=5491150477075&text=Hola! Quiero cotizar Quesos Rallados por mayor para mi comercio!" target="_blank" >COMPRAR AHORA!</a>
           </div>
         </div>
 
@@ -586,9 +592,9 @@
                 <div class="Informa helpful">
                   <h3>CAMPOBASSO</h3>
                   <ul>
-                    <li><a href="nosotros.html">NOSOTROS</a></li>
-                    <li><a href="nuestros.html">HISTORIA</a></li>
-                    <li><a href="quesos_rallados.html">UNITE!</a></li>
+                    <li><a href="rallados-x-mayor.html#gremio">ATENCIÓN GREMIO</a></li>
+                    <li><a href="nuestra-empresa.html#historia">HISTORIA</a></li>
+                    <li><a href="contacto.html#formNewsletter">UNITE!</a></li>
                     <li><a href="contacto.html">DATA FISCAL</a></li>
                   </ul>
                 </div>
@@ -633,6 +639,9 @@
                 </p>
                 <p>Copyright ©2024 Campobasso Quesos. All Rights Reserved.</p>
               </div>
+              <div class="firma1828 text_align_right">
+                <p>Web Design & Development by <a href="https://www.1828branding.com"> 1828 Branding</a>  
+              </div>
             </div>
           </div>
         </div>
@@ -645,7 +654,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
     <a
-      href="https://api.whatsapp.com/send?phone=51900000000&text"
+    href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola estoy navegando el sitio web!"
       class="float"
       target="_blank"
     >
