--- a/contacto.html
+++ b/contacto.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <!-- site metas -->
-    <title>Campobasso</title>
+    <title>Quesos Campobasso - Sigamos en Contacto</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="1828 Branding Agency | hola@1828branding.com"/>
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- style css -->
@@ -269,7 +269,7 @@
       <h1>COMPRAR CAMPOBASSO</h1>
       <div data-aos="fade-up" class="container-info-contacto-h5">
         <h5>PEDIDOS PARTICULARES</h5>
-        <h5 class="text-contact-sub">Mail a hola@quesoscampobasso.com</h5>
+        <h5 class="text-contact-sub"> Mail a <a href="mailto:hola@queoscampobasso.com">hola@quesoscampobasso.com</a></h5>
       </div>
       <div data-aos="fade-up" class="container-info-contacto-h5">
         <h5>VENTAS A COMERCIOS</h5>
@@ -279,7 +279,7 @@
         <h5 class="text-contact-sub">CAMPOBASSO en puntos de venta</h5>
       </div>
       <div data-aos="fade-up" class="container-info-contacto-h5">
-        <h5 class="text-contact-sub">Mail a ventas@campobassoquesos.com</h5>
+        <h5 class="text-contact-sub"> Mail a <a href="mailto:ventas@quesoscampobasso.com">ventas@quesoscampobasso.com</a></h5>
         <h5 class="text-contact-sub">Tel. 011 3455-3497</h5>
       </div>
       <div data-aos="fade-up" class="container-info-contacto-h5">
@@ -289,9 +289,7 @@
         </h5>
       </div>
       <div data-aos="fade-up" class="container-info-contacto-h5">
-        <h5 class="text-contact-sub">
-          Mail a gastronomicos@campobassoquesos.com
-        </h5>
+        <h5 class="text-contact-sub"> Mail a <a href="mailto:gastronomicos@quesoscampobasso.com">gastronomicos@quesoscampobasso.com</a></h5>
         <h5 class="text-contact-sub">Tel. 011 3455-3497</h5>
       </div>
     </div>
@@ -425,9 +423,9 @@
                 <div class="Informa helpful">
                   <h3>CAMPOBASSO</h3>
                   <ul>
-                    <li><a href="nosotros.html">NOSOTROS</a></li>
-                    <li><a href="nuestros.html">HISTORIA</a></li>
-                    <li><a href="quesos_rallados.html">UNITE!</a></li>
+                    <li><a href="rallados-x-mayor.html#gremio">ATENCIÓN GREMIO</a></li>
+                    <li><a href="nuestra-empresa.html#historia">HISTORIA</a></li>
+                    <li><a href="contacto.html#formNewsletter">UNITE!</a></li>
                     <li><a href="contacto.html">DATA FISCAL</a></li>
                   </ul>
                 </div>
@@ -472,6 +470,9 @@
                 </p>
                 <p>Copyright ©2024 Campobasso Quesos. All Rights Reserved.</p>
               </div>
+              <div class="firma1828 text_align_right">
+                <p>Web Design & Development by <a href="https://www.1828branding.com"> 1828 Branding</a>  
+              </div>
             </div>
           </div>
         </div>
@@ -484,7 +485,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
     <a
-      href="https://api.whatsapp.com/send?phone=51900000000&text"
+    href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola estoy navegando el sitio web!"
       class="float"
       target="_blank"
     >
