--- a/puntos-de-venta.html
+++ b/puntos-de-venta.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <!-- site metas -->
-    <title>Campobasso</title>
+    <title>Quesos Campobasso - Nuestro Almacén Gourmet y Puntos de Venta</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="1828 Branding Agency | hola@1828branding.com"/>
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- style css -->
@@ -488,6 +488,9 @@
                 </p>
                 <p>Copyright ©2024 Campobasso Quesos. All Rights Reserved.</p>
               </div>
+              <div class="firma1828 text_align_right">
+                <p>Web Design & Development by <a href="https://www.1828branding.com"> 1828 Branding</a>  
+              </div>
             </div>
           </div>
         </div>
@@ -500,7 +503,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
     <a
-      href="https://api.whatsapp.com/send?phone=51900000000&text"
+    href="https://api.whatsapp.com/send?phone=5491138682267&text=Hola estoy navegando el sitio web!"
       class="float"
       target="_blank"
     >
